--- a/02-a11y/01-form.html
+++ b/02-a11y/01-form.html
@@ -9,18 +9,24 @@
   <body>
     <h1>01 - Form</h1>
     <form action="/submit">
-      <span>Name</span>
-      <input type="text" />
+
+      <label>
+        Name
+        <input type="text" />
+      </label>
       <br /><br />
       <label>
         Email
         <input type="text" />
       </label>
       <br /><br />
-      <span>Favorite Character</span>
-      <div><input type="radio" id="spongebob" />Spongebob</div>
-      <div><input type="radio" id="patrick" />Patrick</div>
-      <div><input type="radio" id="sandy" />Sandy</div>
+      <label for="class-select">Favorite Character:</label>
+      <select name="class" id="class-select">
+        <option value="">Select One</option>
+        <option value="spongebob">spongebob</option>
+        <option value="patrick">patrick</option>
+        <option value="sandy">sandy</option>
+      </select>
       <br />
       <button>Submit</button>
     </form>
