--- a/01-html/02-images.html
+++ b/01-html/02-images.html
@@ -8,7 +8,24 @@
   </head>
   <body>
     <main>
-      <!-- Add your code here -->
+      <figure>
+        <img
+          src="http://placekitten.com/200/150"
+          alt="A cute kitten"
+          width="200"
+          height="150"
+        />
+        <figcaption>Kittens Rules!</figcaption>
+      </figure>
+      <figure>
+        <img
+          src="https://place-puppy.com/200x150"
+          alt="An adorable puppy"
+          width="200"
+          height="150"
+        />
+        <figcaption>Puppies Rules!</figcaption>
+      </figure>
     </main>
   </body>
 </html>
