--- a/01-html/04-form.html
+++ b/01-html/04-form.html
@@ -9,7 +9,62 @@
   <body>
     <main>
       <form action="/submit">
-        <!-- Add your code here -->
+        <label for="name">Name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          placeholder="Full Name"
+          required
+        /><br /><br />
+
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="name@domain.com"
+          required
+        /><br /><br />
+
+        <fieldset>
+          <legend>Favorite Character:</legend>
+          <input
+            type="radio"
+            id="spongebob"
+            name="character"
+            value="Spongebob"
+          />
+          <label for="spongebob">Spongebob</label><br />
+          <input type="radio" id="sandy" name="character" value="Sandy" />
+          <label for="sandy">Sandy</label><br />
+          <input type="radio" id="patrick" name="character" value="Patrick" />
+          <label for="patrick">Patrick</label>
+        </fieldset>
+        <br />
+
+        <fieldset>
+          <legend>Are you a fan of the show?</legend>
+          <input
+            type="checkbox"
+            id="watched_all"
+            name="fan"
+            value="watched_all"
+          />
+          <label for="watched_all">Yes, I have watched all episodes!</label
+          ><br />
+          <input
+            type="checkbox"
+            id="best_memes"
+            name="fan"
+            value="best_memes"
+          />
+          <label for="best_memes">Yes, it's got the best memes.</label>
+        </fieldset>
+        <br />
+
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
       </form>
     </main>
   </body>
