--- a/01-html/01-lists.html
+++ b/01-html/01-lists.html
@@ -9,7 +9,22 @@
   <body>
     <main>
       <h1>Grocery List</h1>
-      <!-- Add your code here -->
+      <ol>
+        <li>Eggs</li>
+        <li>
+          Milk
+          <ul>
+            <li>2%</li>
+            <li>Almond Milk</li>
+            <li>Coconut Milk</li>
+          </ul>
+        </li>
+        <li>Cheese</li>
+        <li>Pasta</li>
+        <li>Optmeal</li>
+        <li>Apples</li>
+        <li><a href="#cleaning-supplies">Cleaning supplies</a></li>
+      </ol>
     </main>
   </body>
 </html>
