--- a/06-bootstrap/01-cards.html
+++ b/06-bootstrap/01-cards.html
@@ -7,12 +7,48 @@
     <title>Exercise 01 - Cards</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../_styles/styles.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>01 - Cards</h1>
-    <!-- Add your code here -->
+    <main class="container-fluid mt-5">
+      <h1>01 - Cards</h1>
+      <div class="card d-inline-block w-25">
+        <h5 class="card-header">Featured</h5>
+        <div class="box bg-secondary"></div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non modi
+            voluptate dicta dolores consectetur, quisquam quam placeat rem
+            aspernatur ratione eveniet quo delectus architecto nisi veniam rerum
+            in sint odit?
+          </p>
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card d-inline-block w-25">
+        <h5 class="card-header">Featured</h5>
+        <div class="box bg-secondary"></div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non modi
+            voluptate dicta dolores consectetur, quisquam quam placeat rem
+            aspernatur ratione eveniet quo delectus architecto nisi veniam rerum
+            in sint odit?
+          </p>
+          <button class="btn btn-primary">Click Me</button>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
