--- a/06-bootstrap/04-modal.html
+++ b/06-bootstrap/04-modal.html
@@ -7,12 +7,47 @@
     <title>Exercise 04 - Modals</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="../_styles/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <h1>04 - Bootstrap Modal</h1>
-    <!-- Add your code here -->
+    <div class="text-center">
+      <div class="my-5">
+        Click on the button below for more information inside a modal
+      </div>
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#modal"
+      >
+        More details
+      </button>
+    </div>
+    <div class="modal fade" id="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLabel">More Details</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+            dictum volutpat augue, a sagittis nunc efficitur non. Curabitur non
+            pellentesque lorem. Nulla facilisi. Vivamus a sem quis dui volutpat
+            eleifend quis vel augue. Pellentesque habitant morbi tristique
+            senectus et netus et malesuada fames ac turpis egestas.
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
